order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-container
          image: adittt/mernstack_order_service:build-8
          ports:
            - containerPort: 5503
          volumeMounts:
            - name: order-secret
              mountPath: "/home/node/app/config"
              readOnly: true
      volumes:
        - name: order-secret
          secret:
            secretName: order-secret

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 5503
      targetPort: 5503
