order-service/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mernspace-order-ingress
  annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/enable-cors: "true"
      nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, PATCH, GET, POST, OPTIONS, HEAD"
      nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.adityavyas.com"
      nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
      nginx.ingress.kubernetes.io/cors-allow-headers: "Idempotency-Key,DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Pragma,Expires"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api-pizza.adityavyas.com
    secretName: auth-tls
  rules:
  - host: api-pizza.adityavyas.com
    http:
      paths:
        - path: /api/order(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: order-service
              port:
                number: 5503
